<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>cn.maxpixel</groupId>
    <artifactId>minecraft-decompiler</artifactId>
    <name>MinecraftDecompiler</name>
    <version>3.0.1-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <depend.asm.ver>9.2</depend.asm.ver>
        <depend.gson.ver>2.8.9</depend.gson.ver>
        <depend.jansi.ver>2.4.0</depend.jansi.ver>
        <depend.fastutil.ver>8.5.6</depend.fastutil.ver>
        <depend.jopt.ver>6.0-alpha-3</depend.jopt.ver>
        <depend.cfr.ver>0.152</depend.cfr.ver>
        <depend.fernflower.ver>403</depend.fernflower.ver>
        <depend.jmh.ver>1.34</depend.jmh.ver>
    </properties>
    <pluginRepositories>
        <pluginRepository>
            <id>plugins-snapshot</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
            <releases><enabled>false</enabled></releases>
            <snapshots><enabled>true</enabled></snapshots>
        </pluginRepository>
    </pluginRepositories>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${project.basedir}</directory>
                            <followSymlinks>false</followSymlinks>
                            <useDefaultExcludes>true</useDefaultExcludes>
                            <includes>
                                <include>MinecraftDecompiler.jar</include>
                            </includes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.9.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.0-SNAPSHOT</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>cn.maxpixel.mcdecompiler.MinecraftDecompilerCommandLine</mainClass>
                            <manifestEntries>
                                <Automatic-Module-Name>cn.maxpixel.mcdecompiler</Automatic-Module-Name>
                                <Implementation-Version>${project.version}</Implementation-Version>
                            </manifestEntries>
                        </transformer>
                    </transformers>
                    <outputFile>MinecraftDecompiler.jar</outputFile>
                    <minimizeJar>true</minimizeJar>
                    <filters>
                        <filter>
                            <artifact>it.unimi.dsi:fastutil-core</artifact>
                            <excludes>
                                <exclude>it/unimi/dsi/fastutil/booleans/**</exclude>
                                <exclude>it/unimi/dsi/fastutil/chars/**</exclude>
                                <exclude>it/unimi/dsi/fastutil/bytes/**</exclude>
                                <exclude>it/unimi/dsi/fastutil/doubles/**</exclude>
                                <exclude>it/unimi/dsi/fastutil/floats/**</exclude>
                                <exclude>it/unimi/dsi/fastutil/io/**</exclude>
                                <exclude>it/unimi/dsi/fastutil/longs/**</exclude>
                                <exclude>it/unimi/dsi/fastutil/shorts/**</exclude>
                                <exclude>it/unimi/dsi/fastutil/**/*Double*</exclude>
                                <exclude>it/unimi/dsi/fastutil/**/*Float*</exclude>
                                <exclude>it/unimi/dsi/fastutil/**/*Byte*</exclude>
                                <exclude>it/unimi/dsi/fastutil/**/*Char*</exclude>
                                <exclude>it/unimi/dsi/fastutil/**/*Long*</exclude>
                                <exclude>it/unimi/dsi/fastutil/**/*Short*</exclude>
                                <exclude>it/unimi/dsi/fastutil/**/*Reference*</exclude>
                                <exclude>it/unimi/dsi/fastutil/**/*Stack*</exclude>
                            </excludes>
                        </filter>
                        <filter>
                            <artifact>org.benf:cfr</artifact>
                            <includes><include>**</include></includes>
                        </filter>
                        <filter>
                            <artifact>net.minecraftforge:fernflower</artifact>
                            <includes><include>**</include></includes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <id>shade</id>
                        <phase>package</phase>
                        <goals><goal>shade</goal></goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>generate-source</id>
                        <phase>package</phase>
                        <goals><goal>jar</goal></goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>generate-javadoc</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                            <goal>javadoc</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <locale>en_US</locale>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.0.0-M2</version>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>forge-maven</id>
            <url>https://maven.minecraftforge.net/</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>${depend.asm.ver}</version>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-commons</artifactId>
            <version>${depend.asm.ver}</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${depend.gson.ver}</version>
        </dependency>
        <dependency>
            <groupId>org.fusesource.jansi</groupId>
            <artifactId>jansi</artifactId>
            <version>${depend.jansi.ver}</version>
        </dependency>
        <dependency>
            <groupId>it.unimi.dsi</groupId>
            <artifactId>fastutil-core</artifactId>
            <version>${depend.fastutil.ver}</version>
        </dependency>
        <dependency>
            <groupId>net.sf.jopt-simple</groupId>
            <artifactId>jopt-simple</artifactId>
            <version>${depend.jopt.ver}</version>
        </dependency>
        <dependency>
            <groupId>org.benf</groupId>
            <artifactId>cfr</artifactId>
            <version>${depend.cfr.ver}</version>
        </dependency>
        <dependency>
            <groupId>net.minecraftforge</groupId>
            <artifactId>fernflower</artifactId>
            <version>${depend.fernflower.ver}</version>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-core</artifactId>
            <version>${depend.jmh.ver}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-generator-annprocess</artifactId>
            <version>${depend.jmh.ver}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <distributionManagement>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/MaxPixelStudios/MinecraftDecompiler</url>
        </repository>
    </distributionManagement>
</project>